--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
 .navbar-logo a {
     font-size: 24px;
     font-weight: bold;
-    color: #007F86;
+    color: #866400;
     text-decoration: none;
 }
 
